--- a/Zed-rate-limiter/dockerfile
+++ b/Zed-rate-limiter/dockerfile
@@ -1,14 +1,11 @@
-# Step 1: Use the official OpenJDK 21 slim image as the base image
-FROM openjdk:21-slim
-
-# Step 2: Set the working directory in the container to /app
+FROM maven:3.9.9-eclipse-temurin-21 AS build
 WORKDIR /app
-
-# Step 3: Copy the JAR file from your local machine to the container
-COPY target/RateLimitingApp-1.0-SNAPSHOT.jar app.jar
-
-# Step 4: Expose port 8080 (or any other port your Spring Boot app uses)
+COPY pom.xml ./
+RUN mvn dependency:go-offline -B
+COPY . ./
+RUN mvn clean package -DskipTests
+FROM openjdk:21-slim
+WORKDIR /app
+COPY --from=build /app/target/RateLimitingApp-1.0-SNAPSHOT.jar ratelimitingapp.jar
 EXPOSE 8080
-
-# Step 5: Command to run the JAR file
-ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT ["java", "-jar", "ratelimitingapp.jar"]
