--- a/Zed-rate-limiter/src/main/resources/application.properties
+++ b/Zed-rate-limiter/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 aws.accessKeyId=accessKeyId
 aws.secretKey=secretKey
 aws.region=region
+aws.s3.bucket=bucket
 
 spring.redis.host=host.docker.internal
 spring.redis.port=6379
